syntax = "proto3";
option go_package = "github.com/KusionStack/controller-mesh/pkg/apis/ctrlmesh/proto";
package proto;

import "k8s.io/apimachinery/pkg/apis/meta/v1/generated.proto";
import "google/protobuf/duration.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

service FaultInject {
  rpc SendConfig(FaultInjection) returns (FaultInjectConfigResp);
}

message FaultInjectConfigResp {
  bool success = 1;
  string message = 2;
}

message FaultInjection {
  repeated HTTPFaultInjection httpFaultInjections = 1;

  Option option = 2;
  enum Option {
    UPDATE = 0;
    DELETE = 1;
    CHECK = 2;
    RECOVER = 3;
  }
  string configHash = 3;
  string name = 4;
}

message HTTPFaultInjection {
  // Delay requests before forwarding, emulating various failures such as
  // network issues, overloaded upstream service, etc.
  Delay delay = 1;

  // Abort Http request attempts and return error codes back to downstream
  // service, giving the impression that the upstream service is faulty.
  Abort abort = 2;

  Match match = 3;

  string Name = 4;

  EffectiveTimeRange effective_time = 5;

  message Delay {
    // Percentage of requests on which the delay will be injected (0-100).
    // Use of integer `percent` value is deprecated. Use the double `percentage`
    // field instead.
    double percent = 1;

    oneof http_delay_type {
      // Add a fixed delay before forwarding the request. Format:
      // 1h/1m/1s/1ms. MUST be >=1ms.
      google.protobuf.Duration fixed_delay = 2 [ (google.api.field_behavior) = REQUIRED ];

      // google.protobuf.Duration exponential_delay = 3 ;
    }
  }

  message Abort {

    double percent = 1;

    oneof error_type {
      // HTTP status code to use to abort the Http request.
      int32 http_status = 2;

      // GRPC status code to use to abort the request. The supported
      // codes are documented in
      // https://github.com/grpc/grpc/blob/master/doc/statuscodes.md Note: If
      // you want to return the status "Unavailable", then you should specify
      // the code as `UNAVAILABLE`(all caps), but not `14`.
      string grpc_status = 3;

      // $hide_from_docs
      string http2_error = 4;
    }
  }
}

// EffectiveTimeRange specifies the effective time range for fault injection
// configuration.
message EffectiveTimeRange {
  // StartTime is the time when the fault injection configuration starts to take
  // effect.
  string start_time = 1;

  // EndTime is the time when the fault injection configuration ceases to be
  // effective.
  string end_time = 2;

  // DaysOfWeek specifies which days of the week the fault injection
  // configuration is effective. 0 represents Sunday, 1 represents Monday, and
  // so on.
  repeated int32 days_of_week = 3;

  // DaysOfMonth specifies on which days of the month the fault injection
  // configuration is effective. For example, 1 represents the first day of the
  // month, and so on.
  repeated int32 days_of_month = 4;

  // Months specifies which months of the year the fault injection configuration
  // is effective. 1 represents January, 2 represents February, and so on.
  repeated int32 months = 5;
}

message Match {
  repeated ResourceMatch resources = 1;
  repeated HttpMatch httpMatch = 2;
  repeated StringMatch stringMatch = 3;
}

message StringMatch {
  StringMatchType matchType = 1;
  repeated string contents = 2;
  repeated string methods = 3;
  enum StringMatchType {
    NORMAL = 0;
    REGEXP = 1;
  }
}

message HttpMatch {
  repeated string url = 1;
  repeated string method = 2;
}

// Describes how to match K8s resources.
//
// ```yaml
//  resources:
//  - apiGroups:
//    - ""
//    namespaces:
//    - '*'
//    resources:
//    - pods
//    verbs:
//    - delete
// ```
message ResourceMatch {

  // `apiGroups` is a list of matching API groups and may not be empty.
  // "*" matches all API groups and, if present, must be the only entry.
  // +listType=set
  // Required.
  repeated string apiGroups = 1;

  repeated string namespaces = 3;
  repeated string resources = 4;

  // `verbs` is a list of matching verbs and may not be empty.
  // "*" matches all verbs and, if present, must be the only entry.
  // +listType=set
  // Required.
  repeated string verbs = 5;
}
